Change homepage url

--- a/package.json
+++ b/package.json
@@ -22,5 +22,5 @@
   "bugs": {
     "url": "https://github.com/saschati/tape-slider/issues"
   },
-  "homepage": "https://github.com/saschati/tape-slider#readme"
+  "homepage": "https://saschati.github.io/tape-slider-docs/index.html"
 }
