--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "dependencies": {},
-  "devDependencies": {},
+  "devDependencies": {
+    "typescript": "^4.7.4"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/saschati/tape-slider.git"
